--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,72 +3,71 @@
 @tailwind utilities;
 
 html,
-body { 
+body {
   padding: 0;
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 
   /*font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;*/
-  
 }
 
 * {
   box-sizing: border-box;
 }
 
-.header-menu-link{
-  @apply uppercase font-bold text-[16px] hover:border-b-2 hover:border-gray-700 hover:text-gray-700 transition-all duration-150 ease-out pb-4 text-gray-500
+.header-menu-link {
+  @apply uppercase font-bold text-[16px] hover:border-b-2 hover:border-gray-700 hover:text-gray-700 transition-all duration-150 ease-out pb-4 text-gray-500;
 }
 
-.header-menu-item-active .header-menu-link{
-  @apply border-b-2 border-gray-900 transition-all duration-300 ease-linear pb-4 text-gray-900
+.header-menu-item-active .header-menu-link {
+  @apply border-b-2 border-gray-900 transition-all duration-300 ease-linear pb-4 text-gray-900;
 }
 
-.header-mobile-menu-item{
-  @apply mb-2 h-[45px] rounded-lg relative block
+.header-mobile-menu-item {
+  @apply mb-2 h-[45px] rounded-lg relative block;
 }
 
-.header-mobile-menu-link{
-  @apply absolute top-0 right-0 bottom-0 left-0 flex items-center pl-3 font-bold text-[16px] text-gray-500 uppercase
+.header-mobile-menu-link {
+  @apply absolute top-0 right-0 bottom-0 left-0 flex items-center pl-3 font-bold text-[16px] text-gray-500 uppercase;
 }
 
 .header-mobile-menu-item-active {
-  @apply bg-gray-200 
+  @apply bg-gray-200;
 }
 
-.header-mobile-menu-item-active .header-mobile-menu-link{
-  @apply text-gray-900
+.header-mobile-menu-item-active .header-mobile-menu-link {
+  @apply text-gray-900;
 }
 
-.product-mobile-menu-item{
-  @apply mb-2 rounded-lg mt-2
-} 
-
-.product-mobile-menu-link{
- @apply flex items-center pl-3 py-2 font-medium text-[15px] text-gray-500 uppercase
+.product-mobile-menu-item {
+  @apply mb-2 rounded-lg mt-2;
 }
 
-.sidebar-item{
-  @apply uppercase text-base font-semibold tracking-wide px-3 py-2 border-b border-x border-gray-200 text-gray-900 flex items-center justify-between
+.product-mobile-menu-link {
+  @apply flex items-center pl-3 py-2 font-medium text-[15px] text-gray-500 uppercase;
 }
 
-.sidebar-item.sidebar-active{
-  @apply bg-gray-200 text-gray-900
+.sidebar-item {
+  @apply uppercase text-base font-semibold tracking-wide px-3 py-2 border-b border-x border-gray-200 text-gray-900 flex items-center justify-between;
 }
 
-.sidebar-item.sidebar-active a{
-  @apply text-black
+.sidebar-item.sidebar-active {
+  @apply bg-gray-200 text-gray-900;
 }
 
-.slick-initialized .slick-slide{
+.sidebar-item.sidebar-active a {
+  @apply text-black;
+}
+
+.slick-initialized .slick-slide {
   display: flex !important;
   justify-content: center;
 }
 
-.slick-track{
-display: flex !important;
-/* gap: 12px; */
+.slick-track {
+  display: flex !important;
+  /* gap: 12px; */
 }
 
 #nprogress .bar {
@@ -79,9 +78,52 @@ display: flex !important;
   box-shadow: 0 0 10px rgb(225 29 72), 0 0 5px rgb(225 29 72);
 }
 
-.name-product-item-limit{
+.name-product-item-limit {
   display: -webkit-box;
   -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;  
+  -webkit-box-orient: vertical;
   overflow: hidden;
+}
+
+.blog-content img {
+  width: 100%;
+}
+.blog-content ul,
+.blog-content ol {
+  /* margin: 28px 0; */
+}
+.blog-content ul {
+  list-style: disc;
+}
+
+.blog-content ol {
+  list-style: decimal;
+}
+
+.blog-content h1 {
+  font-size: 28px;
+}
+
+.blog-content h3 {
+  font-size: 24px;
+}
+
+.blog-content {
+  color: black;
+  word-wrap: break-word;
+  line-height: 2;
+}
+
+.blog-content p {
+  margin: 15px 0px;
+}
+
+.blog-content a {
+  color: #f05123;
+  text-decoration: underline;
+  font-weight: 400;
+}
+
+.blog-content hr {
+  /* margin: 40px 0; */
 }
